plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.qvinh'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.apache.tika:tika-core:2.9.2'
	implementation 'net.coobird:thumbnailator:0.4.20'
	implementation 'commons-io:commons-io:2.16.1'
	implementation 'commons-codec:commons-codec:1.16.1'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
	implementation 'org.mapstruct:mapstruct:1.6.2'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	runtimeOnly 'org.postgresql:postgresql'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

// Load environment variables from .env for bootRun
def loadDotenv = {
	def envMap = [:]
	def envFile = file('.env')
	if (!envFile.exists()) {
		return envMap
	}
	envFile.eachLine { line ->
		def trimmed = line.trim()
		if (trimmed.isEmpty() || trimmed.startsWith('#')) {
			return
		}
		def idx = trimmed.indexOf('=')
		if (idx <= 0) {
			return
		}
		def key = trimmed.substring(0, idx).trim()
		def value = trimmed.substring(idx + 1).trim()
		if ((value.startsWith('"') && value.endsWith('"')) || (value.startsWith('\'') && value.endsWith('\''))) {
			value = value.substring(1, value.length() - 1)
		}
		envMap[key] = value
	}
	return envMap
}

tasks.named('bootRun') {
	environment loadDotenv()
}
